@@ -58,7 +58,11 @@ FileBinaryInputOutputPort::FileBinaryInputOutputPort(const ucs4string& file, int
     isClosed_(false),
     isPseudoClosed_(false)
 {
+#ifdef _WIN32
+    fd_ = ::open(file.ascii_c_str(), O_RDWR | O_CREAT | O_BYNARY | openFlags, 0644);
+#else
     fd_ = ::open(file.ascii_c_str(), O_RDWR | O_CREAT | openFlags, 0644);
+#endif
 }
 
 FileBinaryInputOutputPort::~FileBinaryInputOutputPort()
