@@ -58,12 +58,20 @@ FileBinaryOutputPort::FileBinaryOutputPort(int fd) : fd_(fd), fileName_(UC("unkn
 
 FileBinaryOutputPort::FileBinaryOutputPort(ucs4string file) : fileName_(file), isClosed_(false), isPseudoClosed_(false), position_(0)
 {
+#ifdef _WIN32
+    fd_ = ::open(file.ascii_c_str(), O_WRONLY | O_CREAT | O_BINARY, 0644);
+#else
     fd_ = ::open(file.ascii_c_str(), O_WRONLY | O_CREAT, 0644);
+#endif
 }
 
 FileBinaryOutputPort::FileBinaryOutputPort(ucs4string file, int openFlags) : fileName_(file), isClosed_(false), isPseudoClosed_(), position_(0)
 {
+#ifdef _WIN32
+    fd_ = ::open(file.ascii_c_str(), O_WRONLY | O_CREAT | O_BINARY | openFlags, 0644);
+#else
     fd_ = ::open(file.ascii_c_str(), O_WRONLY | O_CREAT | openFlags, 0644);
+#endif
 }
 
 FileBinaryOutputPort::~FileBinaryOutputPort()
