@@ -1,5 +1,7 @@
 2009-03-24  higepon  <higepon@users.sourceforge.jp>
 
+        * Added O_BINARY flag for open (_WIN32 only).
+
         * LineBufferedFileBinaryInputOutputPort.h (scheme): Fixed the bug.
 
         * test-data.scm: Added tests for round.
